<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fighterItem"
    android:background="@color/primary_light"
    tools:context=".views.FighterItemAdapter">

    <ImageView
        android:id="@+id/fighterImageView"
        android:layout_width="54dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_margin="8sp"
        android:contentDescription="@string/hero_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="4"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fighterNameTextView"
            android:textColor="@color/secondary_title"
            android:text="@string/fighter_name"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fighterTypeTextView"
            android:textColor="@color/normal_text"
            android:text="@string/fighter_type"
            android:textSize="24sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/fighterDetailsButton"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="@dimen/arrow_button_size"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/fighter_details_button"
        app:icon="@drawable/ic_right_arrow" />

</LinearLayout>
