<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.signin.LoginFragment"
    android:padding="16sp"
    android:id="@+id/loginFragment">

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="@dimen/login_edit_text_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/login_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/loginButtonGuideline"
        android:background="@drawable/hero_input"
        android:paddingVertical="@dimen/input_vertical_padding"
        android:paddingHorizontal="@dimen/input_horizontal_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/hero_input"
        android:paddingVertical="@dimen/input_vertical_padding"
        android:paddingHorizontal="@dimen/input_horizontal_padding"
        android:minHeight="@dimen/login_edit_text_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/login_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitleGuideline" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingVertical="@dimen/login_button_padding_vertical"
        android:paddingHorizontal="@dimen/login_button_padding_horizontal"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTitleGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginButtonGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/heroes_fight"
        android:textColor="@color/title"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toTopOf="@+id/loginTitleGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
